k8s/gitlab/gitlab-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: kube-ops
  labels:
    name: gitlab
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gitlab.rebootshen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
